--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Trabajos Prácticos con Js</title>
 </head>
 <body>
-    <script src="./js/"></script>
+    <script src="./js/ejercicio1.js"></script>
 </body>
 </html>
